Stylesheet/emote/tag updates 2013-12-22

--- a/source-css/cianimotes.css
+++ b/source-css/cianimotes.css
@@ -12,7 +12,7 @@ a[href|="/popcorn"] { display: block; clear: none; float: left; background-image
 
 a[href|="/tianom"] { display: block; clear: none; float: left; background-image: url(%%tianom%%); width: 143px; height: 160px; background-position: -0px -0px }
 
-a[href|="/ppblink"] { display: block; clear: none; float: left; background-image: url(%%ppblink%%); width: 120px; height: 150px; background-position: -0px -0px }
+a[href|="/ppblink"],a[href|="/rimjob"] { display: block; clear: none; float: left; background-image: url(%%ppblink%%); width: 120px; height: 150px; background-position: -0px -0px }
 
 a[href|="/vshoho"] { display: block; clear: none; float: left; background-image: url(%%vshoho%%); width: 200px; height: 150px; background-position: -0px -0px }
 
