--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -305,3 +305,59 @@ a[href|="/ccmad"] {
     background-repeat:no-repeat;
     background-image:url(%%ccmad%%);
 }
+
+a[href|="/cchuzzah"] {
+    float:left;
+    width:151px;
+    height:160px;
+    background-repeat:no-repeat;
+    background-image:url(%%cchuzzah%%);
+}
+
+a[href|="/ccsmile"] {
+    float:left;
+    width:151px;
+    height:160px;
+    background-repeat:no-repeat;
+    background-image:url(%%ccsmile%%);
+}
+
+a[href|="/ccunimpressed"] {
+    float:left;
+    width:128px;
+    height:160px;
+    background-repeat:no-repeat;
+    background-image:url(%%ccunimpressed%%);
+}
+
+a[href|="/ccpoint"] {
+    float:left;
+    width:149px;
+    height:160px;
+    background-repeat:no-repeat;
+    background-image:url(%%ccpoint%%);
+}
+
+a[href|="/ccfly"] {
+    float:left;
+    width:202px;
+    height:80px;
+    background-repeat:no-repeat;
+    background-image:url(%%ccfly%%);
+}
+
+a[href|="/cchello"] {
+    float:left;
+    width:93px;
+    height:180px;
+    background-repeat:no-repeat;
+    background-image:url(%%cchello%%);
+}
+
+a[href|="/ccsocks2"] {
+    float:left;
+    width:141px;
+    height:160px;
+    background-repeat:no-repeat;
+    background-image:url(%%ccsocks2%%);
+}
