--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -237,3 +237,13 @@ a[href|="/battlestance"] {
     background-repeat: no-repeat;
     background-image: url(%%battlestance%%)
     }
+
+a[href|="/hamntor"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-repeat: no-repeat;
+    background-image: url(%%hamntor%%)
+    }
