--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -38,7 +38,7 @@ div.titlebox p.users-online span.word { display: none }
 {
  color:gray!important;
  font-size:13px!important;
- content:"THE A-TEAM";
+ content:"CUTIE MOD CRUSADERS";
  display:inline-block
 }
 
@@ -55,7 +55,7 @@ border-top-right-radius: 5px;
 {
  width: 16px;
  height: 16px;
- background-image: url(%%flair-table%%);
+ background-image: url(%%flair%%);
  background-position: -300% -100%;
  display: inline-block;
  content: "";
@@ -98,17 +98,6 @@ border-top-right-radius: 5px;
 .thumbnail.self{background-position:0px -120px!important}
 .thumbnail.nsfw{background-position:0px 0px!important}
 .thumbnail.default{ background-position:0px -70px!important}
-.sidecontentbox a.author.id-t2_3l5j0 ,.sidecontentbox a.author.id-t2_4a7lu ,.sidecontentbox a.author.id-t2_55ojn ,.sidecontentbox a.author.id-t2_4f80o ,.sidecontentbox a.author.id-t2_5agom ,.sidecontentbox a.author.id-t2_51isb ,.sidecontentbox a.author.id-t2_5eqe2 ,.sidecontentbox a.author.id-t2_3fvpf ,.sidecontentbox a.author.id-t2_5i26a {content:"";color:white;font-size:0pt;display:block}
-.sidecontentbox a.author.id-t2_3l5j0:before ,.sidecontentbox a.author.id-t2_4a7lu:before ,.sidecontentbox a.author.id-t2_55ojn:before ,.sidecontentbox a.author.id-t2_4f80o:before ,.sidecontentbox a.author.id-t2_5agom:before ,.sidecontentbox a.author.id-t2_51isb:before ,.sidecontentbox a.author.id-t2_5eqe2:before ,.sidecontentbox a.author.id-t2_3fvpf:before ,.sidecontentbox a.author.id-t2_5i26a:before {font-size:10pt;color:#369;display:inline-block;}
-.sidecontentbox a.author.id-t2_3l5j0:before {content:"Attractive Female #1"}
-.sidecontentbox a.author.id-t2_4a7lu:before {content:"B.A. Baracus"}
-.sidecontentbox a.author.id-t2_55ojn:before {content:"Colonel Lynch"}
-.sidecontentbox a.author.id-t2_4f80o:before {content:"Faceman"}
-.sidecontentbox a.author.id-t2_5agom:before {content:"The A-Team Van"}
-.sidecontentbox a.author.id-t2_51isb:before {content:"Murdock"}
-.sidecontentbox a.author.id-t2_5eqe2:before {content:"Attractive Female #2"}
-.sidecontentbox a.author.id-t2_3fvpf:before {content:"Hannibal"}
-.sidecontentbox a.author.id-t2_5i26a:before {content:"Attractive Female #3"}
 .sidecontentbox a.author.id-t2_5fmql {display:none;}
 a.author.id-t2_4mwnz,a.author.id-t2_8kzeb,a.author.id-t2_52j0w,div.content a.author.id-t2_5agom,a.author.id-t2_5o2lh,a.author.id-t2_4uott{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
 a.author.id-t2_4mwnz:after,a.author.id-t2_8kzeb:after,a.author.id-t2_52j0w:after,div.content a.author.id-t2_5agom:after,a.author.id-t2_5o2lh:after,a.author.id-t2_4uott:after{font-size:10px!important;display:block;letter-spacing:normal}
@@ -182,7 +171,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  text-align:center;
  width:100%;
 /*Footer image by /u/TheJBW*/
- background-image:url(%%sweetie-actual-bell%%);
+ background-image:url(%%sbstare-cadance%%);
  background-repeat:no-repeat;
  margin-bottom:-80px;
  background-position: 50% 100%;
@@ -209,9 +198,9 @@ h3.imgTitle{
 .side a[href="http://www.reddit.com/r/MLPLounge/new/"]
 {
  display:block;
- width:74px;
- height:80px;
- background:url(%%cadancefilly%%);
+ width:80px;
+ height:89px;
+ background:url(%%tinycmc%%);
  position:fixed; 
  top:260px;
  right:-5px;
@@ -344,7 +333,7 @@ body{background:url(%%scoots-bg%%) no-repeat fixed center center}
  color:black;
  border:0;
  border-radius:0;
- background-image:url(%%flair-table%%);
+ background-image:url(%%flair%%);
  display:inline-block;
  width:16px;
  height:16px;
@@ -440,6 +429,9 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/a09"],a[href|="/rsh
 
 .flair-drstable
 {background-position:0 -1600%}
+
+.flair-surprise
+{background-position:0 -1700%}
 
 a[href|="/priceless"],a[href|="/a10"],a[href|="/rpriceless"],a[href|="/ra10"],a[href|="/ppboring"],a[href|="/b10"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rdhappy"],a[href|="/c10"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rdhuh"],a[href|="/e10"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/twidurr"],a[href|="/rtwidurr"],a[href|="/trixiedance"],a[href|="/trixiedance"]:hover,.flair-twilight,.side .md table tr:nth-of-type(1) td:nth-of-type(3):after,.side .md table tr:nth-of-type(21) td:nth-of-type(3):after,.usertext input[value$="d"] + .usertext-body a[href="/filly"],.usertext input[value$="e"] + .usertext-body a[href="/filly"],.usertext input[value$="f"] + .usertext-body a[href="/filly"]
 {background-position:-100% 0}
