--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -822,7 +822,7 @@ visibility:visible!important;
 /*a.author:before{
     content:"Princess " 
     }*/
-a.author[href$="AttackTheMoon"]:before {content:"SpookPaul420"}
+a.author[href$="AttackTheMoon"]:before {content:"ATMachine"}
 a.author[href$="PUBLIQclopAccountant"]:before {content:"The Public Clop Accounting Firm, LLC"}
 a.author[href$="bryvood"]:before,a.author[href$="Ezreal"]:before {content:"Ezreal"}
 a.author[href$="pr0n0tr0n"]:before,a.author[href$="theodorejhooker"]:before {content:"theodoreajhooker"}
@@ -885,7 +885,7 @@ a.author[href$=Generic_Builder]:before { content:"Genewic Bwuilda" }
 a.author[href$=volcano_bakemeats]:before { content:"Madam Le Bake" }
 a.author[href$=DaylightDarkle]:before { content:"Twilight Sparkle" }
 a.author[href$=Chillusion]:before { content:"Cchhiilllluussiioonn" }
-a.author[href$=Edriss562]:before {content:"Shadowy Overlord"}
+a.author[href$=Edriss562]:before {content:"Esplendid"}
 a.author[href$=Jeroknite]:before {content:"JokerTine"; font-size:15px !important}
 a.author[href$=DarqWolff]:before { content:"[](/DarqWolff)" }
 a.author[href$=cheesemoo]:before { content:"Cheesemeow" }
@@ -1040,7 +1040,7 @@ a.author[href$=lord-hemingway]:after { content:" (Clopper 44)" }
 a.author[href$=Generic_Builder]:after { content:" IS SO KAWAII!" }
 a.author[href$=volcano_bakemeats]:after { content:" (Flour Sack Monster)" }
 a.author[href$=Chillusion]:after { content:" (Because I can.)" }
-a.author[href$=Edriss562]:after { content:" ignore the Andy behind the curtain" }
+a.author[href$=Edriss562]:after { content:" the prodigal son returns"; color:goldenrod }
 a.author[href$=waffen337]:after { content:"(Fucking ass ball bajongler)" }
 a.author[href$=sirtophat]:after { content:" (flaming homosexual)"; color:purple }
 a.author[href$=cheesemoo]:after { content:" (Still exists, apparently)" }
@@ -1182,6 +1182,59 @@ a[href|="/twipreen"] {width:172px; height:173px; background-position: -170px -64
 a[href|="/cheerileehappy"] {width:173px; height:200px; background-position: -378px -648px}
 
 a[href|="/nighthairity"] { display: block; clear: none; float: left; background-image: url(%%nighthairity%%); width: 250px; height: 250px; background-position: -0px -0px }
+
+a[href|='/ninkafun'] {
+
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%table13%%) }
+
+a[href|='/ninkafun'] {width:233px; height:220px; background-position: -120px -0px}
+
+a[href|='/boredshy'],a[href|='/rainbowmaid1'],a[href|='/drunktwi'],a[href|='/unchangelingprincess'],a[href|='/speedytwins'],a[href|='/scootabunny'],a[href|='/wrongcrimescum'],a[href|='/raritydoggystyle'],a[href|='/slavetofaust'],a[href|='/twililovebook'],a[href|='/sweetierarsoap'],a[href|='/screwhappy'],a[href|='/spikegetti'],a[href|='/cmcformation'],a[href|='/ewcriminalscrum'],a[href|='/derpybroughtyouanupvote'],a[href|='/flutterranger'],a[href|='/rainbowmaid2'],a[href|='/slowpone'],a[href|='/screwstretch'],a[href|='/screwplay'],a[href|='/dirtytwi'],a[href|='/rarityjudge2'],a[href|='/gameover'],a[href|='/deadgummy'],a[href|='/trixieroughmorning'],a[href|='/twipain'],a[href|='/twispike2'],a[href|='/babydragon'],a[href|='/twisoon'],a[href|='/rainbowlikes'],a[href|='/lyrawhatthefuckamireading']{
+
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%emotesheetcc%%) }
+/* first row */
+a[href|="/boredshy"] {width:190px; height:220px; background-position: -0px -0px}
+a[href|="/rainbowmaid1"] {width:230px; height:220px; background-position: -190px -0px}
+a[href|="/drunktwi"] {width:255px; height:260px; background-position: -420px -0px}
+a[href|="/unchangelingprincess"] {width:210px; height:300px; background-position: -720px -0px}
+a[href|="/speedytwins"] {width:250px; height:210px; background-position: -930px -0px}
+a[href|="/scootabunny"] {width:130px; height:210px; background-position: -1200px -0px}
+a[href|="/wrongcrimescum"] {width:130px; height:210px; background-position: -1330px -0px}
+/* second row */
+a[href|="/raritydoggystyle"] {width:450px; height:265px; background-position: -0px -265px}
+a[href|="/slavetofaust"] {width:280px; height:310px; background-position: -440px -310px}
+a[href|="/twililovebook"] {width:200px; height:190px; background-position: -730px -301px}
+a[href|="/sweetierarsoap"] {width:185px; height:190px; background-position: -730px -490px}
+a[href|="/screwhappy"] {width:125px; height:230px; background-position: -930px -215px}
+a[href|="/spikegetti"] {width:210px; height:230px; background-position: -1054px -215px}
+a[href|="/cmcformation"] {width:210px; height:320px; background-position: -1270px -216px}
+a[href|="/ewcriminalscrum"] {width:200px; height:245px; background-position: -930px -445px}
+a[href|="/derpybroughtyouanupvote"] {width:350px; height:220px; background-position: -1150px -545px}
+/* third row */
+a[href|="/flutterranger"] {width:170px; height:200px; background-position: -0px -530px}
+a[href|="/rainbowmaid2"] {width:210px; height:230px; background-position: -170px -530px}
+a[href|="/slowpone"] {width:225px; height:215px; background-position: -385px -620px}
+a[href|="/screwstretch"] {width:225px; height:170px; background-position: -610px -685px}
+a[href|="/screwplay"] {width:168px; height:235px; background-position: -840px -686px}
+a[href|="/dirtytwi"] {width:155px; height:226px; background-position: -1000px -690px}
+a[href|="/rarityjudge2"] {width:165px; height:160px; background-position: -1170px -755px}
+/* fourth row */
+a[href|="/gameover"] {width:160px; height:200px; background-position: -0px -760px}
+a[href|="/deadgummy"] {width:175px; height:150px; background-position: -165px -760px}
+a[href|="/trixieroughmorning"] {width:310px; height:130px; background-position: -0px -950px}
+a[href|="/twipain"] {width:250px; height:155px; background-position: -310px -925px}
+a[href|="/twispike2"] {width:150px; height:200px; background-position: -560px -885px}
+a[href|="/babydragon"] {width:195px; height:215px; background-position: -710px -925px}
+a[href|="/twisoon"] {width:195px; height:215px; background-position: -900px -910px}
+a[href|="/rainbowlikes"] {width:240px; height:215px; background-position: -1090px -920px}
+/* fifth row */
+a[href|="/lyrawhatthefuckamireading"] {width:325px; height:170px; background-position: -0px -1080px}
 
 /********** End of Emotes ************/
 
