--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -11,7 +11,7 @@ div.titlebox .users-online span.number:after {
 a.author[href$="PinkiePieladin"]:after{content:" - User of the Month Sept. 2013"}
 
 
-a.author[href$="Isaaccclarke"]:after{content:" - User of the Month Oct. 2013"}
+a.author[href$="Isaaccclark"]:after{content:" - User of the Month Oct. 2013"}
 
 
 
@@ -82,11 +82,11 @@ div.over18 .entry .buttons .first{padding-left: 0px}
 .side .bottom a {
     display: none;
 }
-
+/*
 .side .bottom:after {
     content: " the Padlers."; 
 }
-
+*/
  .sidebox.create .morelink {display: none;}
 
 body {
