--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -422,3 +422,11 @@ display: block;
 background-image: url(%%themoreyouknow%%);
 float: left
 }
+
+a[href|="/twilightsmile"] {
+height: 27px;
+width: 27px;
+display:block;
+float:left;
+background-image: url(%%twilightsmile%%);
+}
