--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2014,3 +2014,11 @@ a[href|="/octatwihug"] {
  background-position: -0px -1050px;  
 } 
  
+a[href|="/taviheart"] {  
+ display: block;
+ clear: none;
+ float: left;
+ width: 300px;
+ height: 269px;
+ background-image:url(%%shorttest%%);
+}
