--- a/source-css/themirishponies.css
+++ b/source-css/themirishponies.css
@@ -1380,7 +1380,7 @@ Height: 100px;
 
 /* Other Emotes */
 
-a[href|="/fluttersface"], a[href|="/thatirishfella"], a[href|="/rocketmac"]
+a[href|="/fluttersface"], a[href|="/thatirishfella"], a[href|="/rocketmac"], a[href|="/swappaloo"], a[href|="/cutecane"]
 {display:block;clear:none;float:left;background-image:url(%%Other%%)}
 
 a[href="/fluttersface"] {
@@ -1399,6 +1399,18 @@ a[href="/rocketmac"] {
 background-position: -300px -0px;
 Width: 254px;
 Height: 150px;
+}
+
+a[href="/swappaloo"] {
+background-position: -554px -0px;
+Width: 144px;
+Height: 160px;
+}
+
+a[href="/cutecane"] {
+background-position: -698px -0px;
+Width: 200px;
+Height: 183px;
 }
 
 
